# rust-cinema-scraper

./: .gitignore  Cargo.toml  README.md  feed.tera
src/: db_utils.rs  lib.rs  main.rs
