[package]
name = "cinema_feed"
version = "0.1.3"
authors = ["apiraino <apiraino@users.noreply.github.com>"]
edition = "2018"

[dependencies]
uuid = "0.7.1"
clap = "2.32.0"
chrono = "0.4.6"
log = "0.4.6"
env_logger = "0.6.0"
reqwest = "0.9.5"
scraper = "0.9.0"

# http://kracekumar.com/post/153116176705/my-experience-with-rust
[dependencies.rusqlite]
version = "*"
features = ["chrono"]
